# MAI-OOP-Labs-2025

./: .gitignore  README.md
lab_1/: CMakeLists.txt  README.md  main.cpp
lab_1/include/: replace.hpp
lab_1/src/: replace.cpp
lab_1/test/: test01.cpp
